--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-CUNNEKE\\SQLEXPRESS;Initial Catalog=TaskManagement;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=ABDELRAHMAN-MOH\\SQLEXPRESS;Initial Catalog=TaskManagement;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "DataBaseConfig": {
