--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
     "BaseUrl": "http://localhost:5081"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ABDELRAHMAN-MOH\\SQLEXPRESS;Initial Catalog=TaskManagement;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=brooda\\SQLEXPRESS;Initial Catalog=TaskManagement;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "DataBaseConfig": {
