--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,4 @@
-﻿version: "3.9"
-
-services:
+﻿services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: task-sql
@@ -13,7 +11,7 @@ services:
     volumes:
       - sql_data:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P StrongPassword123! -Q 'SELECT 1' -C || exit 1"]
+      test: [ "CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P StrongPassword123! -Q 'SELECT 1' -C || exit 1" ]
       interval: 10s
       timeout: 10s
       retries: 10
@@ -27,6 +25,12 @@ services:
       - "15672:15672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   mongodb:
     image: mongo:7
@@ -35,18 +39,33 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 20s
 
   audit-api:
-    build: D:\DotNetProjects\AuditApi\AuditApi
+    build: C:\Users\LENOVO\RiderProjects\AuditApi\AuditApi
     container_name: audit-api
     ports:
-      - "5080:8080"
+    - "5080:8080"
     environment:
-      - Mongo__ConnectionString=mongodb://mongodb:27017
-      - Mongo__Database=AuditDb
-      - ASPNETCORE_ENVIRONMENT=Development
+    - MongoDb__ConnectionString=mongodb://mongodb:27017  
+    - MongoDb__DatabaseName=AuditDb                      
+    - RabbitMQ__HostName=rabbitmq
+    - RabbitMQ__Port=5672
+    - RabbitMQ__UserName=guest
+    - RabbitMQ__Password=guest
+    - RabbitMQ__QueueName=activities
+    - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
-      - mongodb
+      mongodb:
+       condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
 
   task-api:
     build: .
@@ -55,17 +74,18 @@ services:
       - "5000:8080"
     environment:
       - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=TaskDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;
-      - RABBITMQ__HOSTNAME=rabbitmq
-      - RABBITMQ__USERNAME=guest
-      - RABBITMQ__PASSWORD=guest
-      - RABBITMQ__QUEUENAME=activities
-      - DOTNET_ENVIRONMENT=Development
+      - RabbitMQ__HostName=rabbitmq
+      - RabbitMQ__UserName=guest
+      - RabbitMQ__Password=guest
+      - RabbitMQ__QueueName=activities
+      - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       sqlserver:
         condition: service_healthy
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
 
 volumes:
   sql_data:
   mongo_data:
+  rabbitmq_data:
