--- a/compose.yaml
+++ b/compose.yaml
@@ -50,19 +50,19 @@
     build: C:\Users\LENOVO\RiderProjects\AuditApi\AuditApi
     container_name: audit-api
     ports:
-    - "5080:8080"
+      - "5080:8080"
     environment:
-    - MongoDb__ConnectionString=mongodb://mongodb:27017  
-    - MongoDb__DatabaseName=AuditDb                      
-    - RabbitMQ__HostName=rabbitmq
-    - RabbitMQ__Port=5672
-    - RabbitMQ__UserName=guest
-    - RabbitMQ__Password=guest
-    - RabbitMQ__QueueName=activities
-    - ASPNETCORE_ENVIRONMENT=Development
+      - MongoDb__ConnectionString=mongodb://mongodb:27017
+      - MongoDb__DatabaseName=AuditDb
+      - RabbitMQ__HostName=rabbitmq
+      - RabbitMQ__Port=5672
+      - RabbitMQ__UserName=guest
+      - RabbitMQ__Password=guest
+      - RabbitMQ__QueueName=activities
+      - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       mongodb:
-       condition: service_healthy
+        condition: service_healthy
       rabbitmq:
         condition: service_healthy
 
@@ -70,20 +70,34 @@
   task-api:
     build: .
     container_name: task-api
-    ports:
-      - "5000:8080"
+    expose:
+      - "8080"
     environment:
+      - ASPNETCORE_URLS=http://+:8080
+      - JWT__signingKey=dfwefhiewfuiwehfwyfgiuwehfwehfyuiwefheuifguyiwf23ygyugfuywgdsfwef231
+      - JWT__Issuer=http://localhost:5248
+      - JWT__Audience=http://localhost:5248
       - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=TaskDb;User Id=sa;Password=StrongPassword123!;TrustServerCertificate=True;
       - RabbitMQ__HostName=rabbitmq
       - RabbitMQ__UserName=guest
       - RabbitMQ__Password=guest
       - RabbitMQ__QueueName=activities
+      - Stripe__SecretKey=sk_test_51SqaQvD1E8nuTHnzBR1UFa7hyrUJ3sRoqQIEOfCJXoEGGMwlkk00BLndNg2O3RM6jg7e2qSL4Rg6YKdOIyGCBABv00cl43z6mP
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       sqlserver:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - task-api
 
 volumes:
   sql_data:
